--- a/failures-keep-it-dry/machine-learning/machine-learning.ipynb
+++ b/failures-keep-it-dry/machine-learning/machine-learning.ipynb
@@ -1604,7 +1604,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_test_result = xgboost.predict(df_test_scaled_2)"
+    "test_result = xgboost.predict(df_test_scaled_2)"
    ]
   },
   {
@@ -1622,7 +1622,7 @@
    "source": [
     "df_result = pd.DataFrame({\n",
     "    'id': id,\n",
-    "    'failure': df_test_result,\n",
+    "    'failure': test_result[:,0],\n",
     "})"
    ]
   },
