--- a/Javier/bank-churn/machine-learning/ml3.ipynb
+++ b/Javier/bank-churn/machine-learning/ml3.ipynb
@@ -4481,55 +4481,25 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "from sklearn.feature_extraction import FeatureHasher\n",
     "\n",
-    "# Assuming df is your DataFrame and 'surname' is the name of the column containing surnames\n",
+    "# Sample data\n",
+    "data = pd.DataFrame({'Surname': specified_surnames})\n",
     "\n",
-    "# List of the specified surnames\n",
-    "specified_surnames = [\n",
-    "    \"Hsia\", \"T'ien\", \"Hs?\", \"Kao\", \"Maclean\", \"Ts'ui\", \"P'eng\", \n",
-    "    \"H?\", \"Hsueh\", \"Shih\", \"Ch'ang\", \"Ch'iu\", \"Mazzanti\", \"Tuan\", \n",
-    "    \"Fanucci\", \"Onyemauchechukwu\", \"Tien\", \"Smith\", \"Nwankwo\", \"Manna\",\n",
-    "    \"Teng\", \"Hsiung\", \"Ch'ien\", \"Genovese\", \"Hsieh\", \"T'ao\", \"Ts'ai\",\n",
-    "    \"Trevisani\", \"Martin\", \"T'ang\", \"Hsing\", \"Y?an\", \"Pirozzi\", \"Y?\",\n",
-    "    \"K'ung\", \"Ch'eng\", \"Walker\", \"Tsao\", \"Scott\", \"White\", \"Nwachinemelu\",\n",
-    "    \"Toscani\", \"Ch'in\", \"Pinto\", \"Trevisano\", \"Brown\", \"Palerma\", \"L?\",\n",
-    "    \"Lucchesi\", \"Lo Duca\", \"Hsiao\", \"Ting\", \"Nwabugwu\", \"Ritchie\", \"Liao\",\n",
-    "    \"K?\", \"Lucciano\", \"Chukwudi\", \"Mazzi\", \"Chiu\", \"Tung\", \"Hao\", \"Lu\",\n",
-    "    \"Lai\", \"Lo\", \"Yeh\", \"Cremonesi\", \"Hsu\", \"Chiang\", \"Iadanza\", \"Yobanna\",\n",
-    "    \"Lucchese\", \"Pagnotto\", \"Lettiere\", \"Folliero\", \"Ts'ao\", \"Zetticci\",\n",
-    "    \"Milanesi\", \"Macleod\", \"Nnachetam\", \"Shao\", \"Calabresi\", \"Nwachukwu\",\n",
-    "    \"Milne\", \"Onwuamaeze\", \"Ch'en\", \"Mancini\", \"Baresi\", \"Genovesi\",\n",
-    "    \"O'Donnell\", \"Pisano\", \"Clements\", \"Onyemere\", \"Ugochukwu\",\n",
-    "    \"Chukwuemeka\", \"Chukwufumnanya\", \"Chia\", \"Calabrese\", \"Nnaife\",\n",
-    "    \"Onyekachi\", \"Yobachi\", \"Onwumelu\", \"Chien\", \"Chidubem\", \"Milani\",\n",
-    "    \"Iloerika\", \"Hs?eh\", \"Fiorentini\", \"Nkemakolam\", \"Chukwualuka\",\n",
-    "    \"Eluemuno\", \"Fiorentino\", \"Zikoranachidimma\", \"Tsou\", \"Palermo\",\n",
-    "    \"Nucci\", \"Onyekaozulu\", \"Tseng\", \"Rizzo\", \"Chuang\", \"Yobachukwu\",\n",
-    "    \"Cattaneo\", \"Olisaemeka\", \"Pisani\", \"Uspenskaya\", \"Chu\", \"Chin\",\n",
-    "    \"Nnonso\", \"Iweobiegbunam\", \"Hargreaves\", \"Ndubueze\", \"McGregor\",\n",
-    "    \"Okechukwu\", \"Ku\", \"Li Fonti\", \"Okwudiliolisa\", \"P'an\", \"Aksenov\",\n",
-    "    \"Goliwe\", \"McIntyre\", \"O'Brien\", \"Nkemakonam\", \"Nnamdi\", \"Yefremova\",\n",
-    "    \"Fan\", \"Okeke\", \"Bellucci\", \"De Luca\", \"Ijendu\", \"Udegbulam\",\n",
-    "    \"Lombardo\", \"Milano\", \"Piazza\", \"Nnanna\", \"Nnamutaezinwa\", \"Niu\",\n",
-    "    \"Uspensky\", \"Chukwumaobim\", \"Okwudilichukwu\", \"Dickson\", \"Onyemachukwu\",\n",
-    "    \"Tsai\", \"Aitken\", \"Nkemdilim\", \"Nkemjika\", \"Onio\", \"Ibezimako\",\n",
-    "    \"Chiemenam\", \"Young\", \"Chukwujamuike\", \"Chidiebere\", \"Yermakova\",\n",
-    "    \"Sun\", \"Udinese\", \"Ukaegbunam\", \"Frolov\", \"Okwuadigbo\", \"Chukwukadibia\",\n",
-    "    \"Chiazagomekpere\", \"Watson\", \"Chibueze\", \"Sagese\", \"Chukwueloka\",\n",
-    "    \"Nwebube\", \"Chukwuebuka\", \"Onyekachukwu\", \"Obialo\", \"Wright\", \"Kuo\",\n",
-    "    \"DeRose\", \"Ejimofor\", \"Fomin\", \"Chinedum\", \"Chiawuotu\", \"Fang\",\n",
-    "    \"Ozerova\", \"Nkemdirim\", \"Nwokezuike\", \"McLean\", \"Obiajulu\"\n",
-    "]\n",
+    "# Initialize the FeatureHasher\n",
+    "hasher = FeatureHasher(n_features=100, input_type='string')  # Adjust n_features as needed\n",
     "\n",
-    "# Create new columns for the specified surnames and encode them as one-hot encoded features\n",
-    "for surname in specified_surnames:\n",
-    "    df_test[surname] = (df_test['Surname'] == surname).astype(int)\n",
+    "# Hash the 'Surname' column\n",
+    "hashed_features = hasher.fit_transform(data['Surname'])\n",
     "\n",
-    "# Group all other surnames together and label them as 'other'\n",
-    "df_test['other_surname'] = (~df_test['Surname'].isin(specified_surnames)).astype(int)\n",
+    "# Convert hashed features to DataFrame\n",
+    "hashed_features = pd.DataFrame(hashed_features.toarray(), columns=[f'surname_hashed_{i}' for i in range(100)])  # Adjust the range according to n_features\n",
     "\n",
-    "# Drop the original 'surname' column\n",
-    "df_test.drop(columns=['Surname'], inplace=True)"
+    "# Concatenate hashed features with original DataFrame\n",
+    "data = pd.concat([data, hashed_features], axis=1)\n",
+    "\n",
+    "# Drop the original 'Surname' column\n",
+    "data.drop(columns=['Surname'], inplace=True)"
    ]
   },
   {
