added documentation improvement

--- a/HaikalFauzi/failures-keep-it-dry/machine-learning/LR-XGB_tuned.ipynb
+++ b/HaikalFauzi/failures-keep-it-dry/machine-learning/LR-XGB_tuned.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "DATA LOADING"
+    "#1 DATA LOADING"
    ]
   },
   {
@@ -220,7 +220,7 @@
     }
    ],
    "source": [
-    "# Bagian 1: Memuat Data\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
     "# Load the datasets\n",
@@ -236,7 +236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "DATA CHECKING"
+    "#2 DATA CHECKING"
    ]
   },
   {
@@ -308,7 +308,6 @@
     }
    ],
    "source": [
-    "# Bagian 2: Memeriksa Data\n",
     "# Check for missing values\n",
     "missing_values_train = train_data.isnull().sum()\n",
     "missing_values_test = test_data.isnull().sum()\n",
@@ -795,7 +794,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#5 MEMISAHKAN FITUR DAN TARGET"
+    "#5 PREPROCESSING - MEMISAHKAN FITUR DAN TARGET"
    ]
   },
   {
@@ -829,7 +828,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#6 STANDARISASI FITUR"
+    "#6 PREPROCESSING - STANDARISASI FITUR"
    ]
   },
   {
@@ -1067,7 +1066,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#7 MEMBAGI DATA LATIH DAN VALIDASI"
+    "#7 PREPROCESSING MEMBAGI DATA LATIH DAN DATA UJI"
    ]
   },
   {
@@ -1096,7 +1095,8 @@
     "print(\"Shape of X_train:\", X_train.shape)\n",
     "print(\"Shape of X_val:\", X_val.shape)\n",
     "print(\"Shape of y_train:\", y_train.shape)\n",
-    "print(\"Shape of y_val:\", y_val.shape)\n"
+    "print(\"Shape of y_val:\", y_val.shape)\n",
+    "    "
    ]
   },
   {
@@ -1126,7 +1126,7 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "import xgboost as xgb\n",
     "\n",
-    "# Define the parameter grids for Logistic Regression and XGBoost\n",
+    "# Define parameter grid\n",
     "param_grid_lr = {\n",
     "    'C': [0.01, 0.1, 1, 10, 100],\n",
     "    'penalty': ['l1', 'l2'],\n",
@@ -1694,19 +1694,19 @@
    "source": [
     "from sklearn.ensemble import StackingClassifier\n",
     "\n",
-    "# Define the base models using the best estimators\n",
+    "# base model dari best estimator\n",
     "base_models = [\n",
     "    ('lr', best_lr),\n",
     "    ('xgb', best_xgb)\n",
     "]\n",
     "\n",
-    "# Define the meta model\n",
+    "# Meta model\n",
     "meta_model = LogisticRegression(max_iter=1000, random_state=42)\n",
     "\n",
-    "# Create the stacking classifier\n",
+    "# membuat stacking classifier\n",
     "stacking_model = StackingClassifier(estimators=base_models, final_estimator=meta_model, cv=5)\n",
     "\n",
-    "# Train the stacking classifier\n",
+    "# Training stacking classifier\n",
     "stacking_model.fit(X_train, y_train)\n"
    ]
   },
@@ -1733,7 +1733,6 @@
    "source": [
     "from sklearn.metrics import roc_auc_score\n",
     "\n",
-    "# Evaluate the model\n",
     "y_val_pred = stacking_model.predict_proba(X_val)[:, 1]\n",
     "roc_auc = roc_auc_score(y_val, y_val_pred)\n",
     "print(f'ROC AUC Score: {roc_auc}')\n"
@@ -1821,14 +1820,11 @@
     }
    ],
    "source": [
-    "# Make predictions on the test data\n",
     "y_test_pred = stacking_model.predict_proba(X_test_scaled)[:, 1]\n",
     "\n",
-    "# Prepare the submission file\n",
     "submission = pd.DataFrame({'id': test_data['id'], 'failure': y_test_pred})\n",
-    "#submission.to_csv('submission_lr-xgb_tuned.csv', index=False)\n",
+    "submission.to_csv('submission_lr-xgb_tuned.csv', index=False)\n",
     "\n",
-    "# Display the first few rows of the submission file\n",
     "submission.head()"
    ]
   }
