--- a/HaikalFauzi/failures-keep-it-dry/machine-learning/LogisticRegression.ipynb
+++ b/HaikalFauzi/failures-keep-it-dry/machine-learning/LogisticRegression.ipynb
@@ -1053,12 +1053,10 @@
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "# Scale features\n",
     "scaler = StandardScaler()\n",
     "X_scaled = scaler.fit_transform(X)\n",
     "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
-    "# Display the first few rows of the scaled features\n",
     "pd.DataFrame(X_scaled, columns=X.columns).head()\n"
    ]
   },
@@ -1066,7 +1064,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#7 MEMBAGI DATA LATIH DAN VALIDASI"
+    "#7 MEMBAGI DATA LATIH DAN DATA UJI"
    ]
   },
   {
@@ -1088,10 +1086,8 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# Split the training data into training and validation sets\n",
     "X_train, X_val, y_train, y_val = train_test_split(X_scaled, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Display the shape of the training and validation sets\n",
     "print(\"Shape of X_train:\", X_train.shape)\n",
     "print(\"Shape of X_val:\", X_val.shape)\n",
     "print(\"Shape of y_train:\", y_train.shape)\n",
@@ -1557,10 +1553,8 @@
     }
    ],
    "source": [
-    "# Bagian 9: Evaluasi Model\n",
     "from sklearn.metrics import roc_auc_score\n",
     "\n",
-    "# Evaluate the model\n",
     "y_val_pred = model.predict_proba(X_val)[:, 1]\n",
     "roc_auc = roc_auc_score(y_val, y_val_pred)\n",
     "print(f'ROC AUC Score on Validation Set: {roc_auc}')\n"
@@ -1648,14 +1642,11 @@
     }
    ],
    "source": [
-    "# Make predictions on the test data\n",
     "y_test_pred = model.predict_proba(X_test_scaled)[:, 1]\n",
     "\n",
-    "# Prepare the submission file\n",
     "submission = pd.DataFrame({'id': test_data['id'], 'failure': y_test_pred})\n",
-    "#submission.to_csv('submission_lr.csv', index=False)\n",
+    "submission.to_csv('submission_lr.csv', index=False)\n",
     "\n",
-    "# Display the first few rows of the submission file\n",
     "submission.head()\n"
    ]
   }
